# Magrathea

./: .gitignore  .gitmodules  Makefile  README.md  TODO
.github/workflows/: windows-release.yml
Magrathea/: CMakeLists.txt  Makefile
Magrathea/includes/: Magrathea.h  save.h
Magrathea/srcs/: main.c
Magrathea/srcs/core/: appController.c
Magrathea/srcs/graphicControls/: loadGraphics.c
Magrathea/srcs/saveGestion/: save.c
includes/: game.h  global.h  map.h  player.h
srcs/: main.c
srcs/proceduralGenerator/: generateMap.c  generateMap.h
srcs/saves/: README.md
